--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -93,7 +93,7 @@
   translation: Interests
 
 - id: education
-  translation: Brief Bio
+  translation: Brief CV
 
 - id: user_profile_latest
   translation: Latest
